turkane code refactor